--- a/src/components/layoutManager/homeLayout/HomeLayout.scss
+++ b/src/components/layoutManager/homeLayout/HomeLayout.scss
@@ -2,7 +2,7 @@
 $header-padding: 64px;
 $primary-900: #00218A;
 $primary-700: #233DAA;
-
+$margin-header: 120px;
 
 @import "src/custom/components.scss";
 
@@ -53,7 +53,13 @@ body{
   
 }
 .header-container{
-  height: 120px;
+  height: $margin-header;
+  +div{
+    width: 100% !important;
+  }
+}
+.margin-header{
+  margin-top: $margin-header !important;
 }
 .header-padding{
   padding-left: $header-padding !important;
