--- a/src/components/layoutManager/homeLayout/HomeLayout.scss
+++ b/src/components/layoutManager/homeLayout/HomeLayout.scss
@@ -1,22 +1,30 @@
 //* Define global variable
 $header-padding: 64px;
-$primary-900: #00218A;
-$primary-700: #233DAA;
+$primary-900: #00218a;
+$primary-700: #233daa;
 $margin-header: 120px;
 
 @import "src/custom/components.scss";
 
 //? Custom css
-body{
+#gatsby-focus-wrapper{
+  >div+div{
+    >div>div{
+      overflow: hidden;
+    }
+  }
+}
+
+body {
   font-family: Nunito;
 }
 .navbar {
   padding-top: 1.7rem;
   padding-bottom: 1.7rem;
-  background: #FFFFFF;
-  .nav-link{
+  background: #ffffff;
+  .nav-link {
     font-weight: bold;
-    color: #455A64;
+    color: #455a64;
     text-transform: uppercase;
     position: relative;
     display: block;
@@ -24,54 +32,54 @@ body{
     padding-left: 0px !important;
     padding-right: 0px !important;
     &:before {
-        position: absolute;
-        content: '';
-        width: 0;
-        height: 2px;
-        bottom: 5px;
-        left: 50%;
-        background-color: #455A64;
-        -webkit-transition: .5s;
-        -o-transition: .5s;
-        transition: .5s;
+      position: absolute;
+      content: "";
+      width: 0;
+      height: 2px;
+      bottom: 5px;
+      left: 50%;
+      background-color: #455a64;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s;
     }
-    &.active{
-      color:$primary-900 !important;
+    &.active {
+      color: $primary-900 !important;
       &:before {
         width: 100%;
         background-color: $primary-900;
         left: 0;
       }
     }
-    &:hover{
+    &:hover {
       &:before {
         width: 100%;
         left: 0;
       }
     }
   }
-  
 }
-.header-container{
-  height: $margin-header;
-  +div{
+.header-container {
+  + div {
     width: 100% !important;
+    height: calc(100vh - 120px) !important;
+    margin-top: 120px;
   }
 }
-.margin-header{
+.margin-header {
   margin-top: $margin-header !important;
 }
-.header-padding{
+.header-padding {
   padding-left: $header-padding !important;
   padding-right: $header-padding !important;
 }
-.banner{
+.banner {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;;
+  align-items: flex-start;
   padding: 0px;
-  background: linear-gradient(180deg, #FFFFFF 0%, #DDE4FB 100%);
+  background: linear-gradient(180deg, #ffffff 0%, #dde4fb 100%);
   flex: none;
   order: 0;
   align-self: stretch;
@@ -80,14 +88,13 @@ body{
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 800px;
-  .banner-img{
+  height: calc(100vh - 120px);
+  .banner-img {
     height: 100%;
     position: absolute;
     right: 10%;
     top: 0;
   }
 }
-.caption{
-
+.caption {
 }
