--- a/src/custom/components.scss
+++ b/src/custom/components.scss
@@ -13,6 +13,7 @@
   align-items: center;
   text-align: center;
   color: #FFFFFF;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
 }
 .btn-outline-primary{
   border-color: $primary-700;
