--- a/src/pages/Home/SecondSection.module.scss
+++ b/src/pages/Home/SecondSection.module.scss
@@ -1,15 +1,14 @@
 .section-background {
   width: 100%;
   height: 100vh;
-  background-image: url('/imgs/people_illustration.png'), url('/imgs/decoration.png');
+  background-image: url(/imgs/people_illustration2.png),
+    url(/imgs/decoration2.png);
   background-repeat: no-repeat, no-repeat;
-  // background-position: 64px 170px, left 116px;
-  background-position: 64px 54px, left 0px;
+  background-position: calc(100% - 280px) calc((100% - 170px)/2), right 50%;
   display: flex;
-  flex-direction: row;
-  justify-content: end;
-  // padding: 80px 64px 40px;
-  padding: 0px 64px 40px;
+  flex-direction: column;
+  align-items: center;
+  padding: 80px 64px 40px;
 
   .content {
     /* Auto Layout */
@@ -17,11 +16,11 @@
     flex-direction: column;
     align-items: center;
     padding: 0px;
-
     position: static;
-    width: 774px;
+    width: 100%;
     height: 561px;
     left: 538px;
+    top: 80px;
     /* Inside Auto Layout */
 
     flex: none;
@@ -31,9 +30,7 @@
 
     .title {
       position: static;
-      width: 482px;
-      height: 76px;
-      left: calc(50% - 482px/2);
+      left: calc(50% - 482px / 2);
       top: 0px;
       /* Headline 4 - Bold */
       font-weight: bold;
@@ -43,25 +40,18 @@
       align-items: center;
       text-align: center;
       letter-spacing: 0.25px;
-      color: #00218A;
+      color: #00218a;
     }
 
     .block-content {
       /* Auto Layout */
       display: flex;
       flex-direction: row;
-      align-items: stretch;
-      flex-wrap: wrap;
-      padding: 0px;
-      justify-content: space-between;
-      position: static;
-      width: 774px;
-      left: 0px;
-      top: 140px;
-      flex: none;
-      order: 1;
-      flex-grow: 0;
-      margin: 64px 0px;
+      justify-content: space-around;
+      align-items: flex-start;
+      margin-top: 40px;
+      padding: 40px 216px;
+      width: 100%;
 
       .block-of-text {
         display: flex;
@@ -77,7 +67,7 @@
         font-weight: 800;
         font-size: 24px;
         line-height: 120%;
-        color: #607D8B;
+        color: #607d8b;
       }
 
       .block-text {
@@ -89,4 +79,8 @@
       }
     }
   }
+}
+
+.btn{
+  margin-top: 300px;
 }
