--- a/src/pages/Home/FirstSection.module.scss
+++ b/src/pages/Home/FirstSection.module.scss
@@ -1,15 +1,36 @@
 .section-background {
   width: 100%;
-  height: 100vh;
-  background-image: url('/imgs/people_illustration.png'), url('/imgs/decoration.png');
-  background-repeat: no-repeat, no-repeat;
-  // background-position: 64px 170px, left 116px;
-  background-position: 64px 54px, left 0px;
+  height: 100%;
   display: flex;
   flex-direction: row;
+  /* bottom: 0
+px
+; */
+  align-items: end;
   justify-content: end;
-  // padding: 80px 64px 40px;
-  padding: 0px 64px 40px;
+  padding: 0px 64px 176px;
+  position: relative;
+
+  .background {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    bottom: 0;
+    .decoration {
+      position: absolute;
+      z-index: 1;
+      bottom: 0;
+    }
+
+    .people {
+      position: absolute;
+      z-index: 2;
+      bottom: 176.5px;
+      left: 64px;
+    }
+  }
 
   .content {
     /* Auto Layout */
@@ -20,7 +41,6 @@
 
     position: static;
     width: 774px;
-    height: 561px;
     left: 538px;
     /* Inside Auto Layout */
 
@@ -61,7 +81,7 @@
       flex: none;
       order: 1;
       flex-grow: 0;
-      margin: 64px 0px;
+      margin-top: 64px;
 
       .block-of-text {
         display: flex;
