--- a/src/pages/Home/FirstSection.module.scss
+++ b/src/pages/Home/FirstSection.module.scss
@@ -1,15 +1,37 @@
 .section-background {
   width: 100%;
-  height: 100vh;
-  background-image: url('/imgs/people_illustration.png'), url('/imgs/decoration.png');
-  background-repeat: no-repeat, no-repeat;
-  // background-position: 64px 170px, left 116px;
-  background-position: 64px 54px, left 0px;
+  height: 100%;
   display: flex;
   flex-direction: row;
+  /* bottom: 0
+px
+; */
+  align-items: end;
   justify-content: end;
-  // padding: 80px 64px 40px;
-  padding: 0px 64px 40px;
+  padding: 0px 64px 176px;
+  position: relative;
+
+  .background {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    bottom: 0;
+    .decoration {
+      position: absolute;
+      z-index: 1;
+      bottom: 0;
+      left: 0;
+    }
+
+    .people {
+      position: absolute;
+      z-index: 2;
+      bottom: 176.5px;
+      left: 64px;
+    }
+  }
 
   .content {
     /* Auto Layout */
@@ -18,10 +40,8 @@
     align-items: center;
     padding: 0px;
 
-    position: static;
-    width: 774px;
-    height: 561px;
-    left: 538px;
+    position: relative;
+    text-align: left;
     /* Inside Auto Layout */
 
     flex: none;
@@ -30,11 +50,10 @@
     margin: 0px 0px;
 
     .title {
-      position: static;
+      position: relative;
       width: 482px;
       height: 76px;
-      left: calc(50% - 482px/2);
-      top: 0px;
+      top: 37.5px;
       /* Headline 4 - Bold */
       font-weight: bold;
       font-size: 32px;
@@ -54,20 +73,20 @@
       flex-wrap: wrap;
       padding: 0px;
       justify-content: space-between;
-      position: static;
+      position: relative;
       width: 774px;
       left: 0px;
-      top: 140px;
+      top: 38px;
       flex: none;
       order: 1;
       flex-grow: 0;
-      margin: 64px 0px;
+      margin-top: 64px;
 
       .block-of-text {
         display: flex;
         flex-direction: column;
         padding: 0px;
-        position: static;
+        position: relative;
         width: 355px;
         margin-bottom: 64px;
       }
