--- a/src/pages/Home/SecondSection.module.scss
+++ b/src/pages/Home/SecondSection.module.scss
@@ -1,15 +1,39 @@
+$header-margin: 119px;
+
 .section-background {
   width: 100%;
   height: 100vh;
-  background-image: url(/imgs/people_illustration2.png),
-    url(/imgs/decoration2.png);
-  background-repeat: no-repeat, no-repeat;
-  background-position: calc(100% - 280px) calc((100% - 170px)/2), right 50%;
+  // background-image: url(/imgs/people_illustration2.png),
+  //   url(/imgs/decoration2.png);
+  // background-repeat: no-repeat, no-repeat;
+  // background-position: calc(100% - 280px) calc((100% - 170px)/2), right 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 80px 64px 40px;
+  padding: 11px 64px 40px;
+  position: relative;
 
+  .background {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    bottom: $header-margin;
+    .decoration {
+      position: absolute;
+      z-index: 1;
+      bottom: 0;
+      right: 0;
+    }
+
+    .people {
+      position: absolute;
+      z-index: 2;
+      bottom: 170px;
+      right: 280px;
+    }
+  }
   .content {
     /* Auto Layout */
     display: flex;
@@ -28,31 +52,21 @@
     flex-grow: 0;
     margin: 0px 0px;
 
-    .title {
-      position: static;
-      left: calc(50% - 482px / 2);
-      top: 0px;
-      /* Headline 4 - Bold */
-      font-weight: bold;
-      font-size: 32px;
-      line-height: 120%;
-      /* or 38px */
-      align-items: center;
-      text-align: center;
-      letter-spacing: 0.25px;
-      color: #00218a;
-    }
-
     .block-content {
       /* Auto Layout */
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: start;
       align-items: flex-start;
       margin-top: 40px;
       padding: 40px 216px;
+      text-align: left;
       width: 100%;
-
+      .button-position{
+        position: absolute;
+        bottom: calc($header-margin + 93px);
+        right: 354.5px;
+      }
       .block-of-text {
         display: flex;
         flex-direction: column;
