--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -5,6 +5,9 @@ $primary-700: #233DAA;
 $theme-colors: (
     "primary": #233DAA
 );
+
+//import font
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 @import "~bootstrap/scss/bootstrap";
-@import "src/custom/fonts.scss";
 @import "src/custom/components.scss";
+@import "src/custom/common.scss";
